[gd_scene load_steps=4 format=2]

[ext_resource path="res://GameHUDRelated/GameStatsPanel/shared/TowerTierButtonsPanel/TowerTierButtonsPanel.gd" type="Script" id=1]
[ext_resource path="res://GameHUDRelated/GameStatsPanel/shared/Assets/Lines/BlackLine_4x4.png" type="Texture" id=2]
[ext_resource path="res://GameHUDRelated/CombinationRelatedPanels/CombinationWholeScreenPanel/CombinationTowerTierButton/TowerTierButton.tscn" type="PackedScene" id=3]

[node name="TowerTierButtonsPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="Left" type="TextureRect" parent="."]
margin_right = 4.0
margin_bottom = 55.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 2 )
stretch_mode = 2

[node name="Right" type="TextureRect" parent="."]
margin_left = 286.0
margin_right = 290.0
margin_bottom = 55.0
mouse_filter = 2
size_flags_horizontal = 10
texture = ExtResource( 2 )
stretch_mode = 2

[node name="Top" type="TextureRect" parent="."]
margin_right = 290.0
margin_bottom = 4.0
mouse_filter = 2
size_flags_vertical = 2
texture = ExtResource( 2 )
stretch_mode = 2

[node name="Bottom" type="TextureRect" parent="."]
margin_top = 51.0
margin_right = 290.0
margin_bottom = 55.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 2 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 290.0
margin_bottom = 55.0
mouse_filter = 2
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 6.0
margin_top = 6.0
margin_right = 284.0
margin_bottom = 49.0
mouse_filter = 2

[node name="TowerTierButton01" parent="MarginContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_right = 43.0
margin_bottom = 43.0
tier = 1
selected = false

[node name="TowerTierButton02" parent="MarginContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 47.0
margin_right = 90.0
margin_bottom = 43.0
tier = 2
selected = false

[node name="TowerTierButton03" parent="MarginContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 94.0
margin_right = 137.0
margin_bottom = 43.0
tier = 3
selected = false

[node name="TowerTierButton04" parent="MarginContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 141.0
margin_right = 184.0
margin_bottom = 43.0
tier = 4
selected = false

[node name="TowerTierButton05" parent="MarginContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 188.0
margin_right = 231.0
margin_bottom = 43.0
tier = 5
selected = false

[node name="TowerTierButton06" parent="MarginContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 235.0
margin_right = 278.0
margin_bottom = 43.0
tier = 6
selected = false

[connection signal="on_clicked" from="MarginContainer/HBoxContainer/TowerTierButton01" to="." method="_on_TowerTierButton01_on_clicked"]
[connection signal="on_clicked" from="MarginContainer/HBoxContainer/TowerTierButton02" to="." method="_on_TowerTierButton02_on_clicked"]
[connection signal="on_clicked" from="MarginContainer/HBoxContainer/TowerTierButton03" to="." method="_on_TowerTierButton03_on_clicked"]
[connection signal="on_clicked" from="MarginContainer/HBoxContainer/TowerTierButton04" to="." method="_on_TowerTierButton04_on_clicked"]
[connection signal="on_clicked" from="MarginContainer/HBoxContainer/TowerTierButton05" to="." method="_on_TowerTierButton05_on_clicked"]
[connection signal="on_clicked" from="MarginContainer/HBoxContainer/TowerTierButton06" to="." method="_on_TowerTierButton06_on_clicked"]
